Rename endpoints according to REST
